vendor/tt-call/tests/ui/type-fn-eof.stderr
error: no rules expected the token `fn`
 --> tests/ui/type-fn-eof.rs:5:16
  |
5 |     input = [{ fn }]
  |                ^^ no rules expected this token in macro call
  |
  = note: while trying to match end of macro
